--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "build:single-spa:curve-compare": "ng build curve-compare --configuration production",
+    "serve:single-spa:curve-compare": "ng s --project curve-compare --disable-host-check --port 4400 --live-reload false"
   },
   "private": true,
   "dependencies": {
@@ -18,11 +20,15 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "chart.js": "^4.2.1",
     "rxjs": "~7.5.0",
+    "single-spa": ">=4.0.0",
+    "single-spa-angular": "^8.0.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "15.0.0",
     "@angular-devkit/build-angular": "^15.0.4",
     "@angular/cli": "~15.0.4",
     "@angular/compiler-cli": "^15.0.0",
@@ -33,6 +39,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "style-loader": "^3.3.1",
     "typescript": "~4.8.2"
   }
 }
